--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "roger chahoud",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.3.4",
     "nodemon": "^3.0.1"
-  }
+  },
+  "type": "module"
 }
