--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://darkchahoud:ROrogrrr-9@cluster0.wcf1jzz.mongodb.net/?retryWrites=true&w=majority
+SECRET_JWT=99bae124842837d09f08b8e744486614
